--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,24 +4,27 @@
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee 
  http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
 	id="WebApp_ID" version="3.0">
-	<display-name>Customer Management</display-name>
-	<servlet>
-		<servlet-name>jersey-servlet</servlet-name>
-		<servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
-		<init-param>
-			<param-name>jersey.config.server.provider.packages</param-name>
-			<param-value>th.ac.ku.kps.eng.cpe.controller</param-value>
-		</init-param>
-		<init-param>
-			<param-name>com.sun.jersey.api.json.POJOMappingFeature</param-name>
-			<param-value>true</param-value>
-		</init-param>
-	</servlet>
+	<display-name>Customer Management</display-name> 
+ <servlet>
+	<servlet-name>jersey-servlet</servlet-name>
+	<servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
+	<init-param>
+		<param-name>jersey.config.server.provider.packages</param-name>
+		<param-value>th.ac.ku.kps.eng.cpe.controller;th.ac.ku.kps.eng.cpe.soa.filter;org.codehaus.jackson.jaxrs</param-value>
+	</init-param>
+	<init-param>
+		<param-name>com.sun.jersey.api.json.POJOMappingFeature</param-name>
+		<param-value>true</param-value>
+	</init-param>
+
+	<init-param>
+		<param-name>com.sun.jersey.spi.container.ContainerRequestFilters</param-name>
+		<param-value>th.ac.ku.kps.eng.cpe.soa.filter.AuthFilter</param-value>
+	</init-param>
+	<load-on-startup>1</load-on-startup>
+</servlet>
 	<servlet-mapping>
 		<servlet-name>jersey-servlet</servlet-name>
 		<url-pattern>/rest/*</url-pattern>
-	</servlet-mapping>
-
-
-
+	</servlet-mapping> 
 </web-app>
